--- a/.drone.yml
+++ b/.drone.yml
@@ -9,3 +9,8 @@ steps:
     commands:
       - python -m pip install -r requirements.txt
       - flake8
+      
+      
+trigger:
+  branch:
+  - branch1
