--- a/.drone.yml
+++ b/.drone.yml
@@ -9,4 +9,10 @@ steps:
     commands:
       - python -m pip install -r requirements.txt
       - flake8
+      
+      
+trigger:
+  event:
+    exclude:
+    - push
 
