--- a/.drone.yml
+++ b/.drone.yml
@@ -10,5 +10,11 @@ steps:
       - python -m pip install -r requirements.txt
       - flake8
       
+     
+trigger:
+  event:
+    include:
+    - push
+    - pull_request
       
 
