--- a/.drone.yml
+++ b/.drone.yml
@@ -8,3 +8,10 @@ steps:
     commands:
       - python -m pip install -r requirements.txt
       - flake8
+      
+      
+      
+trigger:
+  branch:
+  - branch1
+
