--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,11 @@ steps:
       - python -m pip install -r requirements.txt
       - flake8
       
+      
+trigger:
+  branch:
+  - branch1
+      
      
 
       
