--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,10 @@ steps:
       - python -m pip install -r requirements.txt
       - flake8
       
+trigger:
+  branch:
+  - branch1
+      
       
       
 
