--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,11 @@ steps:
     commands:
       - python -m pip install -r requirements.txt
       - flake8
+      
+    
+trigger:
+  branch:
+  - peace
 
       
       
