--- a/.drone.yml
+++ b/.drone.yml
@@ -10,12 +10,9 @@ steps:
       - python -m pip install -r requirements.txt
       - flake8
       
-    
 trigger:
   branch:
-  - peace
-  event:
-  - push
+  - branch1
 
 
       
