--- a/.drone.yml
+++ b/.drone.yml
@@ -1,16 +1,11 @@
 kind: pipeline
-type: docker
 name: default
 
 steps:
-  - name: lint
-    image: python:3.7-alpine
-    commands:
-      - python -m pip install -r requirements.txt
-      - flake8
-      
-      
-
+- name: test
+  image: php
+  commands:
+  - echo "The test is successful."
 
 trigger:
   branch:
