--- a/.drone.yml
+++ b/.drone.yml
@@ -1,16 +1,13 @@
 kind: pipeline
 type: docker
-name: default
-
+name: linux
 platform:
   os: linux
   arch: amd64
 
 steps:
 - name: build
-  image: php
-  commands:
-  - echo "Hello"
+  image: golang
 
       
       
