--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,13 @@
 kind: pipeline
 type: docker
-name: linux-amd64
+name: linux-arm64
 platform:
-  arch: amd64
   os: linux
+  arch: arm64
 
 steps:
 - name: test
-  image: golang:1.14.4
+  image: golang
 
       
       
