--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,12 @@
+---
 kind: pipeline
 type: docker
-name: linux-arm64
-
-
-
+name: default
 
 steps:
-- name: test
+- name: build
   image: golang
-
+  
       
       
 
