--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,14 @@
----
 kind: pipeline
-type: docker
+type: kubernetes
 name: default
 
 steps:
-- name: build
-  image: golang
+- name: greeting
+  image: alpine
+  commands:
+  - echo hello
+  - echo world
+
   
       
       
